# MAI-SEM3_LAB4

./: .gitignore
lab4/: CMakeLists.txt  main.cpp
lab4/include/: array.h  figure.h  pentagon.h  point.h  rhombus.h  trapezoid.h
lab4/tests/: tests01.cpp
